--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Movies App</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    </head>
-
-    <body>
-        <div class="container">
-            {% for news in newss %}
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="container">
-                            <div class="card-body">
-                                <h5 class="card-title"> {{ news.headline }}</h5>
-                            </div>
-                            <p class="card-text" > {{ news.body }}</p>
-                            <p class="card-text" > <small class="text-muted">{{ news.date }}</small></p>
-                        </div>
+{% extends 'base.html' %}
+{% block content %}
+    {% for news in newss %}
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="container">
+                    <div class="card-body">
+                        <h5 class="card-title"> {{ news.headline }}</h5>
                     </div>
+                    <p class="card-text" > {{ news.body }}</p>
+                    <p class="card-text" > <small class="text-muted">{{ news.date }}</small></p>
                 </div>
-            {% endfor %}
+            </div>
         </div>
-    </body>
-</html>
+    {% endfor %}
+{% endblock content %}
