--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -27,8 +27,12 @@
           id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="{% url 'news' %}">News</a>
-            <a class="nav-link" href="#">Login</a>
-            <a class="nav-link" href="#">Sign Up</a>
+              {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'logoutaccount' %}">Log Out ({{ user.username }})</a>
+              {% else %}
+                <a class="nav-link" href="{% url 'loginaccount' %}">Login</a>
+                <a class="nav-link" href="{% url 'signupaccount' %}">Sign Up</a>
+              {% endif %}
           </div>
         </div>
       </div>
